@@ -1,3 +1,8 @@
+2010-08-16 Raphael Neider <rneider AT web.de>
+
+	* src/pic16/glue.c (pic16emitStaticSeg): allow extern declarations with
+	  incomplete types, fixes #3041150
+
 2010-08-15 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* sdas/asxxsrc/asxxxx.h: changed NCPS to PATH_MAX to fix bug 3041470
